Add reference code toggle functionality for missionaries